backend_main_django/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: django-app
        imagePullPolicy: Never
#        envFrom:
#          - configMapRef:
#              name: django-config
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  type: NodePort
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80
