backend_main_django/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-django
  rules:
  - host: star-burger.test
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service-1
            port:
              number: 80
